WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
227462
Nullptr crash in ResourceLoadStatisticsDatabaseStore::allAttributedPrivateClickMeasurement
https://bugs.webkit.org/show_bug.cgi?id=227462
Summary
Nullptr crash in ResourceLoadStatisticsDatabaseStore::allAttributedPrivateCli...
Sihui Liu
Reported
2021-06-28 14:53:52 PDT
...
Attachments
Patch
(2.75 KB, patch)
2021-06-28 14:59 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Patch for landing
(2.28 KB, patch)
2021-06-28 15:19 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2021-06-28 14:54:25 PDT
rdar://50772934
Sihui Liu
Comment 2
2021-06-28 14:59:48 PDT
Created
attachment 432427
[details]
Patch
Chris Dumez
Comment 3
2021-06-28 15:01:55 PDT
Comment on
attachment 432427
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=432427&action=review
> Source/WebKit/NetworkProcess/Classifier/ResourceLoadStatisticsDatabaseStore.cpp:3509 > + return attributions;
Darin told me in the past to return { }; in such cases and not move the variable declaration so I am passing along the comment :)
Sihui Liu
Comment 4
2021-06-28 15:19:20 PDT
Created
attachment 432430
[details]
Patch for landing
EWS
Comment 5
2021-06-28 17:21:58 PDT
Committed
r279353
(
239221@main
): <
https://commits.webkit.org/239221@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 432430
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug