Nullptr crash in ResourceLoadStatisticsDatabaseStore::allAttributedPrivateClickMeasurement https://bugs.webkit.org/show_bug.cgi?id=227462 rdar://50772934

Reviewed by Chris Dumez.

Return early if statement cannot be created.

* NetworkProcess/Classifier/ResourceLoadStatisticsDatabaseStore.cpp:
(WebKit::ResourceLoadStatisticsDatabaseStore::insertDomainRelationshipList):
(WebKit::ResourceLoadStatisticsDatabaseStore::allAttributedPrivateClickMeasurement):


Canonical link: https://commits.webkit.org/239221@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279353 268f45cc-cd09-0410-ab3c-d52691b4dbfc